fix copy to clipboard icon not showing

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -319,6 +319,7 @@ pre {
   // Copy button
   .copy-button {
     position: absolute;
+    padding: 0;
     top: 10px;
     right: 10px;
     width: 36px;
